--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:14
-    env_file: .env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    env_file: .env
 
   web:
     build: ./backend
@@ -18,16 +22,61 @@ services:
       - db
     env_file: .env
 
-  airflow:
+  airflow-init:
     image: apache/airflow:2.8.1-python3.10
+    command: db init
     environment:
       AIRFLOW__CORE__EXECUTOR: SequentialExecutor
       AIRFLOW__CORE__DAGS_FOLDER: /opt/airflow/dags
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     volumes:
       - ./dags:/opt/airflow/dags
-    ports:
-      - "8080:8080"
     depends_on:
       - db
     env_file: .env
+
+  airflow-webserver:
+    image: apache/airflow:2.8.1-python3.10
+    command: webserver
+    environment:
+      AIRFLOW__LOGGING__REMOTE_LOGGING: 'False'
+      AIRFLOW__LOGGING__LOGGING_BACKEND: 'airflow.utils.log.file_task_handler.FileTaskHandler'
+      AIRFLOW__LOGGING__LOGGING_LEVEL: INFO
+      AIRFLOW__LOGGING__BASE_LOG_FOLDER: /opt/airflow/logs
+      AIRFLOW__LOGGING__DAG_PROCESSOR_MANAGER_LOG_LOCATION: /opt/airflow/logs/dag_processor_manager/dag_processor_manager.log
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__CORE__DAGS_FOLDER: /opt/airflow/dags
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - airflow-logs:/opt/airflow/logs
+    depends_on:
+      - db
+    env_file: .env
+
+
+  airflow-scheduler:
+    image: apache/airflow:2.8.1-python3.10
+    command: scheduler
+    environment:
+      AIRFLOW__LOGGING__REMOTE_LOGGING: False
+      AIRFLOW__LOGGING__LOGGING_BACKEND: 'airflow.utils.log.file_task_handler.FileTaskHandler'
+      AIRFLOW__LOGGING__LOGGING_LEVEL: INFO
+      AIRFLOW__LOGGING__BASE_LOG_FOLDER: /opt/airflow/logs
+      AIRFLOW__LOGGING__DAG_PROCESSOR_MANAGER_LOG_LOCATION: /opt/airflow/logs/dag_processor_manager/dag_processor_manager.log
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__CORE__DAGS_FOLDER: /opt/airflow/dags
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - airflow-logs:/opt/airflow/logs
+    depends_on:
+      - db
+    env_file: .env
+
+volumes:
+  postgres-data:
+  airflow-logs:
+
