--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     env_file: .env
 
   web:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./backend:/app
