--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Compose
-        run: docker-compose -f docker-compose.yml build web
+        run: docker compose -f docker-compose.yml build web
 
       - name: Run Django + Airflow tests
-        run: docker-compose -f docker-compose.yml run --rm web python manage.py test
+        run: docker compose -f docker-compose.yml run --rm web python manage.py test
