--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,12 +37,14 @@ jobs:
         run: docker compose -f docker-compose.yml build web
 
       - name: Run Django + Airflow tests
+        run: |
+          docker compose -f docker-compose.yml run --rm web sh -c '
+            echo "POSTGRES_DB=$POSTGRES_DB" > .env &&
+            echo "POSTGRES_USER=$POSTGRES_USER" >> .env &&
+            echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env &&
+            python manage.py test
+          '
         env:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        run: |
-          echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-          echo "POSTGRES_USER=$POSTGRES_USER" >> .env
-          echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
-          docker compose -f docker-compose.yml run --rm web python manage.py test
