fix: correct CI floww

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,26 +33,17 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: docker compose -f docker-compose.yml build web
-
       - name: Create .env file
         run: |
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
 
+      - name: Build Docker containers
+        run: docker compose -f docker-compose.yml build web
+
       - name: Run Django + Airflow tests
-        run: |
-          docker compose -f docker-compose.yml run --rm web sh -c '
-            echo "POSTGRES_DB=$POSTGRES_DB" > .env &&
-            echo "POSTGRES_USER=$POSTGRES_USER" >> .env &&
-            echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env &&
-            python manage.py test
-          '
-        env:
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        run: docker compose -f docker-compose.yml run --rm web sh -c '
+
       - name: Remove .env
         run: rm .env
