--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,3 +48,22 @@ jobs:
 
       - name: Remove .env
         run: rm .env
+  
+  lint:
+    name: Lint with Black
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install Black
+        run: pip install black
+
+      - name: Run Black
+        run: black --check backend
