--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,4 +66,4 @@ jobs:
         run: pip install black
 
       - name: Run Black
-        run: black --check backend
+        run: black --check --exclude '/migrations/' backend
